@@ -7,6 +7,7 @@
         "content_exchange_source",
         "content_exchange",
         "microphone",
-        "push-notification-client" ],
+        "push-notification-client",
+        "webview"],
     "policy_version": 16.04
 }
