@@ -1,3 +1,6 @@
+x.x.x
+Feature: Connectivity information
+
 1.1.0 2023-07-24
 Feature: Clear chat
 Feature: Act as primary device to add second device via QR code
